--- a/SIGOFCv3/Areas/General/Views/Reportes/Reporte.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Reportes/Reporte.cshtml
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                             <div id="dvFiltroDLinea" class="form-group col-md-2" style="display:none;">
-                                <label for="lblChkDLineaId" class="text-small">Dirección de Línea</label>
+                                <label for="lblChkDLineaId" class="text-small">Tipo Modalidad</label>
                                 <div class="custom-control custom-checkbox">
                                     @Html.CheckBox("chkDLineaAll", new { @class = "custom-control-input" })
                                     <label for="chkDLineaAll" class="custom-control-label">Todos</label>
