--- a/SIGOFCv3/Areas/General/Views/Reportes/Rpt_Prod_supervisores.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Reportes/Rpt_Prod_supervisores.cshtml
@@ -257,14 +257,14 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="listFiltro">
-                                        <h6 class="text-center">Sel. Sub Dirección de Linea</h6>
+                                        <h6 class="text-center">Sel. Tipo de Modalidad</h6>
                                         <div class="box" style="height:150px; overflow-y: scroll;">
                                             <ul class="list-group">
                                                 <li>
                                                     <div class="checkbox">
                                                         <label>
                                                             <input type="checkbox" class="check" value="00" id="chkTodoR">
-                                                            Todas las DL
+                                                            Todos los Tipos
                                                         </label>
                                                     </div>
                                                 </li>
