--- a/SIGOFCv3/Areas/General/Views/Reportes/Rpt_Produccion_ItinerarioSupervision.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Reportes/Rpt_Produccion_ItinerarioSupervision.cshtml
@@ -260,7 +260,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-4">
-                                    <h5>Sub Dirección de Linea</h5>
+                                    <h5>Tipo Modalidad</h5>
                                     <div class="box">
                                         <div class="custom-control custom-checkbox">
                                             <input type="checkbox" class="custom-control-input" id="chkTodoR" name="chkTodoR" checked>
