--- a/SIGOFCv3/Areas/Supervision/Views/Reportes/SupervisioneSegunOportunidad.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/Reportes/SupervisioneSegunOportunidad.cshtml
@@ -51,7 +51,7 @@
                                 </div>
                             </div>
                             <div id="dvFiltroDL" class="form-group col-md-2">
-                                <label for="lblChkSubDireccionId" class="text-small">Sub Dirección de Linea</label>
+                                <label for="lblChkSubDireccionId" class="text-small">Tipo Modalidad</label>
                                 <div class="custom-control custom-checkbox">
                                     @Html.CheckBox("chkkSubDireccionAll", new { @class = "custom-control-input" })
                                     <label for="chkkSubDireccionAll" class="custom-control-label">Todos</label>
