Actualización descripción Mandatos

--- a/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/_shared/_Mandatos.cshtml
+++ b/SIGOFCv3/Areas/Supervision/Views/ManInformeExSitu/_shared/_Mandatos.cshtml
@@ -118,7 +118,7 @@
     <div><br /></div>
     <div class="form-row">
         <div class="form-group col-md-4">
-            <label for="chkobjMandatos" class="text-small">¿Se disponen medidas correctivas?</label>
+            <label for="chkobjMandatos" class="text-small">¿Se disponen mandatos?</label>
         </div>
         <div class="form-group col-md-6">
             <input class="form-check-input" data-val="true" data-val-required="El campo chkMCorrectivas es obligatorio."
